added the date input

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -41,8 +41,11 @@
         <option value="large">L</option>
         <option value="extra_large">XL</option>
         <option value="extra_extra_large">XXL</option>
-
       </select>
+    </div>
+    <div class="date">
+      <p>Choose a deliver date</p>
+      <input type="date" id="date" name="delivery_date">
     </div>
 
   </form>
