Added selecting color and size in the form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -27,6 +27,31 @@
         <input type="email" id="email" name="email" required placeholder="email@example.com">
       </div>
 
+      <!-- T-Shirt Color -->
+      <div>
+        <label for="color">T-Shirt Color:</label>
+        <select id="color" name="color" required>
+            <option value="">Choose a color</option>
+            <option value="red">Red</option>
+            <option value="blue">Blue</option>
+            <option value="green">Green</option>
+        </select>
+      </div>
+
+      <!-- T-Shirt Size -->
+      <div>
+        <label for="size">T-Shirt Size:</label>
+        <select id="size" name="size" required>
+            <option value="">Choose a size</option>
+            <option value="XS">XS</option>
+            <option value="S">S</option>
+            <option value="M">M</option>
+            <option value="L">L</option>
+            <option value="XL">XL</option>
+            <option value="XXL">XXL</option>
+        </select>
+      </div>
+
 
     </form>
 
