Added delivery date and submit button

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -52,13 +52,22 @@
         </select>
       </div>
 
+       <!-- Delivery Date -->
+       <div>
+        <label for="deliveryDate">Delivery Date:</label>
+        <input type="date" id="deliveryDate" name="deliveryDate" required>
+      </div>
+
+       <!-- Submit Button -->
+      <div>
+        <button type="submit">Submit Order</button>
+      </div>
 
     </form>
-
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Elmira Shafiei</h2>
   </footer>
 </body>
 
