removed trailing hashes on input and link elements

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Luke form exercise</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/Form-Controls/styles.css" />
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/Form-Controls/styles.css">
   </head>
   <body>
     <header>
@@ -17,20 +17,20 @@
         <form>
             <div class="name">
             <label for="name">Name: </label>
-            <input id="name" placeholder="Your name" required />
+            <input id="name" placeholder="Your name" required>
           </div>
           <br />
           <div class="email">
             <label for="email">Email: </label>
-            <input id="email" type="email" placeholder="Your email" required />
+            <input id="email" type="email" placeholder="Your email" required>
           </div>
           <div class="color">
             <p>Please select your favorite color.</p>
-            <input type="radio" id="red" name="color" value="red" />
+            <input type="radio" id="red" name="color" value="red">
             <label for="red">Red</label><br />
-            <input type="radio" id="green" name="color" value="green" />
+            <input type="radio" id="green" name="color" value="green">
             <label for="green">Green</label><br />
-            <input type="radio" id="blue" name="color" value="blue" />
+            <input type="radio" id="blue" name="color" value="blue">
             <label for="blue">Blue</label><br />
           </div>
           <br />
@@ -48,7 +48,7 @@
           </div><br>
           <div class="date">
             <label for="date">Choose a deliver date.</label>
-            <input type="date" id="date" name="delivery_date" />
+            <input type="date" id="date" name="delivery_date">
           </div>
         </form>
       </div>
