--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -6,7 +6,7 @@
     <title>Luke form exercise</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/Form-Controls/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
