--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -51,14 +51,10 @@
   <br> 
   <div> 
     <label> Delivery Date
-    <input required type="date">
+    <input required type="date" min="2024-10-15" max="2024-11-15">
     </label>
-    <p >
-    Please select a date within the next 4 weeks! 
-    </p>
   </div>
   <br>
-  
    <button>submit</button>
   
   </form>
