--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Welcome to My Websites</h1>
     <ul>
         <li><a href="Wireframe/index.html">About Git</a></li>
+        <li><a href="Form-Controls/index.html">About Git</a></li>
     </ul>
 </body>
 </html>
