--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,28 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My form exercise</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>Product Pick</h1>
-  </header>
-  <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
-  </form>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>My form exercise</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <h1>Product Pick</h1>
+    </header>
+    <main>
+      <div class="container">
+        <form class="form">
+          <div class="name-input">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              name="John"
+              id="name"
+              placeholder="Username"
+              required
+            />
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input
+              type="email"
+              name="john@gmail.com"
+              id="email"
+              placeholder="Email address..."
+              required
+            />
+          </div>
+          <div class="color-picker">
+            <label for="color">Color</label>
+            <input type="color" name="color" id="color" required />
+          </div>
+          <div class="radio">
+            <label for="size">XS</label>
+            <input type="radio" name="size" id="size" />
 
-  </main>
-  <footer>
-    <!-- change to your name-->
-    <h2>By Azharuddin Meyer</h2>
-  </footer>
-</body>
+            <label for="size">S</label>
+            <input type="radio" name="size" id="size" />
 
+            <label for="size">M</label>
+            <input type="radio" name="size" id="size" />
+
+            <label for="size">L</label>
+            <input type="radio" name="size" id="size" />
+
+            <label for="size">XL</label>
+            <input type="radio" name="size" id="size" />
+
+            <label for="size">XXL</label>
+            <input type="radio" name="size" id="size" />
+          </div>
+          <div class="date-picker">
+            <label for="date">Date</label>
+            <input type="date" min="" name="date" id="date" />
+          </div>
+
+          <div class="btn">
+            <button class="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+    </main>
+    <footer class="footer">
+      <h2>By Azharuddin Meyer</h2>
+    </footer>
+  </body>
 </html>
