--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -23,6 +23,16 @@
       <label for="email">Customer Email:</label>
       <input type="email" id="email" name="email" required>
     </div>
+    
+    <div>
+      <label for="color">T-shirt Color:</label>
+      <select id="color" name="color" required> 
+        <option value="">Select a color</option>
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
+        <option value="green">Green</option>
+      </select>
+    </div>
 
   </form>
 
