--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -23,7 +23,7 @@
       <label for="email">Customer Email:</label>
       <input type="email" id="email" name="email" required>
     </div>
-    
+
     <div>
       <label for="color">T-shirt Color:</label>
       <select id="color" name="color" required> 
@@ -33,7 +33,19 @@
         <option value="green">Green</option>
       </select>
     </div>
-
+    
+<div>
+      <label for="size">T-shirt Size:</label>
+      <select id="size" name="size" required>
+        <option value="">Select a size</option>
+        <option value="XS">XS</option>
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
+      </select>
+    </div>
   </form>
 
   </main>
