Delivery Date code part added

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -33,7 +33,7 @@
         <option value="green">Green</option>
       </select>
     </div>
-    
+
 <div>
       <label for="size">T-shirt Size:</label>
       <select id="size" name="size" required>
@@ -46,6 +46,12 @@
         <option value="XXL">XXL</option>
       </select>
     </div>
+
+    <div>
+      <label for="delivery">Delivery Date:</label>
+      <input type="date" id="delivery" name="delivery" required min="" max="">
+    </div>
+    
   </form>
 
   </main>
