--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -51,6 +51,10 @@
       <label for="delivery">Delivery Date:</label>
       <input type="date" id="delivery" name="delivery" required min="" max="">
     </div>
+
+    <div>
+      <button type="submit">Submit</button>
+    </div>
     
   </form>
 
