--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -55,13 +55,13 @@
     <div>
       <button type="submit">Submit</button>
     </div>
-    
+
   </form>
 
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+  
+    <h2>By Iakub Dubachev </h2>
   </footer>
 </body>
 
