--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,43 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Git</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+      <header>
+        <h1>Get to know Git</h1>
+        <h2>Version Control for Modern Development</h2>
+      </header>
+      <main>
+        <article>
+          <h3>What is Git?</h3>
+          <p>
+            Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.
+            It is used for: Tracking code changes, Tracking who made changes and Coding collaboration.
+          </p>
+          <button><a href="https://www.datacamp.com/blog/all-about-git" target="_blank">Read More.</a></button>
+        </article>
+        <article>
+          <h3>Why do developers need Git?</h3>
+          <p>
+            Git helps developers work more efficiently, reduce errors, and collaborate seamlessly on projects.
+          </p>
+          <button><a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank">Read More.</a></button>
+        </article>
+        <article>
+          <h3>What is a branch in Git?</h3>
+          <p>
+            Branches in Git allow developers to work independently, experiment, and manage their code in a structured way.
+          </p>
+          <button><a href="https://codeinstitute.net/blog/git-branches" target="_blank">Read More.</a></button>
+        </article>
+      </main>
+      <footer>
+        <h4>&copy All Rights Reserved</h4>
+        <h5>Created by: <a href="https://github.com/PooriyaKTB">Pooriya</a></h5>
+      </footer>
 </body>
 </html
