--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,6 +14,28 @@
   </header>
   <main>
   <form>
+    <label for="userName">User Name</label>
+    <input type="text" id="userName" name="userName" minlength="2" maxlength="100" pattern="[A-Za-z]" required placeholder="Enter User Name">
+    <label for="email">Email Address:</label>
+    <input type="email" id="email" name="email" required placeholder="Enter Email Address">
+    <label for="color">Choose Color</label>
+    <select id="color" name="color" required>
+     <option value="green">Green</option>
+     <option value="white">White</option>
+     <option value="black">Black</option>
+    </select>
+    <label for="size">Choose Size</label>
+    <select id="size" name="size" required>
+    <option value="xSmall">X-Small</option>
+    <option value="small">Small</option>
+    <option value="medium">Medium</option>
+    <option value="large">Large</option>
+    <option value="xLarge">X-Large</option>
+    <option value="xxLarge">XX-Large</option>
+    </select>
+    <label for="date">Date</label>
+    <input type="date" id="date" name="date" min="2024-10-17" max="2024-12-01" required>
+    <button type="submit" class="btnOrder">Order</button>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
