user name input validation updated

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,7 +15,7 @@
   <main>
   <form>
     <label for="userName">User Name</label>
-    <input type="text" id="userName" name="userName" minlength="2" maxlength="100" pattern="[A-Za-z]" required placeholder="Enter User Name">
+    <input type="text" id="userName" name="userName" minlength="2" maxlength="50" pattern="[a-zA-Z]{2,50}" title="Username should contain only letters (a-z, A-Z) and be 2 to 50 characters long." required placeholder="Enter User Name">
     <label for="email">Email Address:</label>
     <input type="email" id="email" name="email" required placeholder="Enter Email Address">
     <label for="color">Choose Color</label>
