Add header, footer; change title, link

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Git Overview</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <header>
+      <h1>Git: A Developer's Essential Tool</h1>
+      <p>Learn why Git is crucial for developers and how it helps manage code efficiently.</p>
+    </header>
+    <footer>
+      <p>&copy; Git. All rights reserved.</p>
+    </footer>
 </body>
 </html
