wireframe task is done

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
-</html
+      <header>
+        <h2>Introduction to Git: Version Control for Developers</h2>
+        <p>This guide will provide you with a foundational understanding of the key Git concepts.</p>
+      </header>
+
+      <main class="main-article">
+        <article>
+          <h4>What is Git?</h4>
+          <p>Git is a distributed version control system that helps developers track changes in their code over time. It allows multiple people to collaborate on the same project without overwriting each other’s work. Git stores a history of changes and enables the user to revert to earlier versions if necessary.</p>
+          <a href="#">Read more</a>       
+        </article>
+        
+        <section class="sub-article">
+
+          <article>
+            <h4>Why do developers need Git?</h4>
+            <p>Developers use Git to collaborate effectively on projects, manage code changes, and keep track of contributions. Git ensures that changes can be merged without conflict and helps in maintaining a backup of the entire project’s history.</p>
+            <a href="#">Read more</a>       
+          </article>
+  
+          <article>
+            <h4>What is a branch in Git?</h4>
+            <p>A branch is a sequence of commits in a project. That allows developers to work on new features or fixes without affecting the main project. It enables teams to experiment.</p>
+            <a href="#">Read more</a>       
+          </article>
+
+        </section>
+        
+      </main>
+
+      <footer>
+        <p>&copy; 2024 Chaitra's Tech Guide. All rights reserved.</p>
+      </footer>
+
+    </body>
+</html>
