Add section with articles

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,6 +11,27 @@
       <h1>Git: A Developer's Essential Tool</h1>
       <p>Learn why Git is crucial for developers and how it helps manage code efficiently.</p>
     </header>
+    <main>
+      <section class="articles">
+        <article class="first-article">
+          <h2>What is Git?</h2>
+          <p>Git is a powerful version control system that tracks changes in code, making collaboration easier and safer.</p>
+        </article>
+  
+        <div class="article-grid">
+          <article>
+            <h2>Why do developers need Git?</h2>
+            <p>Developers use Git to collaborate, track progress, and revert changes safely. It helps manage projects of any size.</p>
+          </article>
+  
+          <article>
+            <h2>What is a branch in Git?</h2>
+            <p>A branch allows developers to work on features or fixes independently, ensuring the main codebase remains unaffected until changes are merged.</p>
+          </article>
+        </div>
+        
+      </section>
+    </main>
     <footer>
       <p>&copy; Git. All rights reserved.</p>
     </footer>
