--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="C:\Users\ANZHELA\Documents\iakubdubachev Wireframe Task  1\Module-User-Focused-Data\Wireframe\css\style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
