proper days added for min and max days

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -49,7 +49,7 @@
 
     <div>
       <label for="delivery">Delivery Date:</label>
-      <input type="date" id="delivery" name="delivery" required min="" max="">
+      <input type="date" id="delivery" name="delivery" required min="5 days" max="28 days">
     </div>
 
     <div>
