Add email input field with required validation

--- a/Form-Control/index.html
+++ b/Form-Control/index.html
@@ -14,13 +14,19 @@
   </header>
   <main>
   <form id="tshirt-order-form">
-    <!---------------------------------------------- name ----------------------------------------------------------->
+  <!---------------------------------------------- name ----------------------------------------------------------->
     <div>
       <label for="name">Name:</label>
       <input type="text" name="name" id="name" placeholder="Enter your name" required minlength="2" required> <br>
     </div>
 
-    <!-- try writing out the requirements first-->
+  <!---------------------------------------------- email ---------------------------------------------------------->
+    <div>
+      <label for="email">email:</label>
+      <input id="email" type="email" required name="email" placeholder="Enter your email">
+    </div>
+
+    
   </form>
 
   </main>
