Added password input field with required validation

--- a/Form-Control/index.html
+++ b/Form-Control/index.html
@@ -26,7 +26,12 @@
       <input id="email" type="email" required name="email" placeholder="Enter your email">
     </div>
 
-    
+  <!---------------------------------------------- password ------------------------------------------------------->
+  <div>
+    <label for="password" >Password:
+      <input type="password" name="password" placeholder="password" required> <br>
+    </label>
+  </div>
   </form>
 
   </main>
