Add color selection with radio buttons and validation

--- a/Form-Control/index.html
+++ b/Form-Control/index.html
@@ -32,6 +32,13 @@
       <input type="password" name="password" placeholder="password" required> <br>
     </label>
   </div>
+  <!---------------------------------------------- Delivery date -------------------------------------------------->
+  <div>
+    <label for="delivey-date" >Delivery date:
+      <input id="delivey-date" type="date" name="date" placeholder="delivey-date" required> <br>
+    </label>
+  </div>
+  
   </form>
 
   </main>
