--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -37,7 +37,7 @@
     </select>
     <label for="date">Date</label>
     <input type="date" id="date" name="date" min="2024-10-17" max="2024-12-01" required>
-    <button type="submit" class="btnOrder">Order</button>
+    <button type="submit" class="btnOrder">Submit</button>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
