Add size dropdown with various t-shirt options

--- a/Form-Control/index.html
+++ b/Form-Control/index.html
@@ -38,7 +38,19 @@
       <input id="delivey-date" type="date" name="date" placeholder="delivey-date" required> <br>
     </label>
   </div>
-  
+  <!---------------------------------------------- Size ----------------------------------------------------------->
+  <div>
+    <label for="size">Size</label>
+    <select name="size" id="size">
+      <option label="XS" value=" XS"> XS</option>
+      <option label="S" value="S">S</option>
+      <option label="M" value="M">M</option>
+      <option label="L" value="L">L</option>
+      <option label="XL" value="XL">XL</option>
+      <option label="XXL" value="XXL">XXL</option>
+    </select>
+  </div>
+
   </form>
 
   </main>
