Added submit and reset buttons to form

--- a/Form-Control/index.html
+++ b/Form-Control/index.html
@@ -51,6 +51,9 @@
     </select>
   </div>
 
+  <button type="submit">Submit</button>
+  <button type="reset">Reset</button>
+
   </form>
 
   </main>
