--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -10,36 +10,39 @@
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
       <header>
-        <h1>Get to know Git</h1>
+        <h1>Get to know <img id="logo" src="../IMG/Git-Logo-1788C.svg" alt="Git Logo"></h1>
         <h2>Version Control for Modern Development</h2>
       </header>
-      <main>
-        <article>
-          <h3>What is Git?</h3>
-          <p>
-            Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.
-            It is used for: Tracking code changes, Tracking who made changes and Coding collaboration.
-          </p>
-          <button><a href="https://www.datacamp.com/blog/all-about-git" target="_blank">Read More.</a></button>
+      <main class="article">
+        <article id="first">
+            <h3>What is Git?</h3>
+            <img id="git-img" src="../IMG/git.png" alt="">
+            <p>
+              Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.
+              It is used for: Tracking code changes, Tracking who made changes and Coding collaboration.
+            </p>
+          <button><a href="https://www.datacamp.com/blog/all-about-git" target="_blank">Read More</a></button>
         </article>
-        <article>
-          <h3>Why do developers need Git?</h3>
-          <p>
-            Git helps developers work more efficiently, reduce errors, and collaborate seamlessly on projects.
-          </p>
-          <button><a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank">Read More.</a></button>
+        <article id="second">
+            <h3>Why do developers need Git?</h3>
+            <img src="../IMG/git for dev.jpeg" alt="">
+            <p>
+              Git helps developers work more efficiently, reduce errors, and collaborate seamlessly on projects.
+            </p>
+          <button><a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank">Read More</a></button>
         </article>
-        <article>
-          <h3>What is a branch in Git?</h3>
-          <p>
-            Branches in Git allow developers to work independently, experiment, and manage their code in a structured way.
-          </p>
-          <button><a href="https://codeinstitute.net/blog/git-branches" target="_blank">Read More.</a></button>
+        <article id="third">
+            <h3>What is a branch in Git?</h3>
+            <img src="../IMG/Branch.webp" alt="">
+            <p>
+              Branches in Git allow developers to work independently, experiment, and manage their code in a structured way.
+            </p>
+            <button><a href="https://codeinstitute.net/blog/git-branches" target="_blank">Read More</a></button>
         </article>
       </main>
       <footer>
-        <h4>&copy All Rights Reserved</h4>
-        <h5>Created by: <a href="https://github.com/PooriyaKTB">Pooriya</a></h5>
+          <h4>&copy All Rights Reserved</h4>
+          <h5>Created by: <a href="https://github.com/PooriyaKTB">Pooriya</a></h5>
       </footer>
 </body>
 </html
