--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -14,17 +14,20 @@
     <main>
       <section class="articles">
         <article class="first-article">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhRY61T5MfQe4Gpp4jUdZvH2vNXy7Nf9su8A&s">
           <h2>What is Git?</h2>
           <p>Git is a powerful version control system that tracks changes in code, making collaboration easier and safer.</p>
         </article>
   
         <div class="article-grid">
           <article>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7keDcfeClWEx5VWiwmI5HLLRh8whAD84YWg&s">
             <h2>Why do developers need Git?</h2>
             <p>Developers use Git to collaborate, track progress, and revert changes safely. It helps manage projects of any size.</p>
           </article>
   
           <article>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdlvzG6Bv9RBQzQ9U7dU-l9PqLpx-AUFo3Rw&s">
             <h2>What is a branch in Git?</h2>
             <p>A branch allows developers to work on features or fixes independently, ensuring the main codebase remains unaffected until changes are merged.</p>
           </article>
