--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <header>
@@ -13,11 +13,11 @@
   </header>
   <main>
     <section>
-        <article class="article">
-            <h2>What is Git?</h2>
-            <p>Git is a distributed version control system that helps track changes in source code during software development.</p>
-            <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read more</a>
-        </article>
+      <article>
+        <h2>What is Git?</h2>
+        <p>Git is a distributed version control system that helps track changes in source code during software development.</p>
+        <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read more</a>
+    </article>
 
         <article>
             <h2>Why Do Developers Need Git?</h2>
