fixing html closing tag and craeting web page based on the wireframe

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <div class="container">
+      <header>
+        <h1>A Comprehensive Guide to Version Control</h1>
+        <p>
+          Git is easy to learn and has a tiny footprint with lightning fast
+          performance. It outclasses SCM tools like Subversion, CVS, Perforce,
+          and ClearCase with features like cheap local branching, convenient
+          staging areas, and multiple workflows.
+        </p>
+      </header>
+      <main>
+        <div>
+          <article class="first__article">
+            <h2>What is Git?</h2>
+            <p>
+              Git is a free and open source distributed version control system
+              designed to handle everything from small to very large projects
+              with speed and efficiency.
+            </p>
+            <h3>
+              <a href="https://git-scm.com/" target="_blank" id="reed__more"
+                >Read more</a
+              >
+            </h3>
+          </article>
+        </div>
+        <div>
+          <article id="second__article">
+            <h2>Why do developers need Git?</h2>
+            <p>
+              All developers will use some kind of version control system (VCS),
+              a tool to allow them to collaborate with other developers on a
+              project without the danger of them overwriting each other's work,
+              and roll back to previous versions of the code base if a problem
+              is discovered later on. The most popular VCS (at least among web
+              developers) is Git, along with GitHub, a site that provides
+              hosting for your repositories and several tools for working with
+              them. This module aims to teach you what you need to know about
+              both of them.It is rare that you will work on a project completely
+              on your own, and as soon as you start working with other people
+              you start to run the risk of conflicting with each other's work —
+              this is when both of you try to update the same piece of code at
+              the same time. You need to have some kind of mechanism in place to
+              manage the occurrences, and help avoid loss of work as a result.
+            </p>
+            <h3>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/GitHub"
+                target="_blank"
+                id="reed__more"
+                >Read more</a
+              >
+            </h3>
+          </article>
+          <article id="third__article">
+            <h2>What is a branch in Git?</h2>
+            <p>
+              The Git feature that really makes it stand apart from nearly every
+              other SCM out there is its branching model. Git allows and
+              encourages you to have multiple local branches that can be
+              entirely independent of each other. The creation, merging, and
+              deletion of those lines of development takes seconds. This means
+              that you can do things like: Frictionless Context Switching.
+              Create a branch to try out an idea, commit a few times, switch
+              back to where you branched from, apply a patch, switch back to
+              where you are experimenting, and merge it in. Role-Based
+              Codelines. Have a branch that always contains only what goes to
+              production, another that you merge work into for testing, and
+              several smaller ones for day to day work. Feature Based Workflow.
+              Create new branches for each new feature you're working on so you
+              can seamlessly switch back and forth between them, then delete
+              each branch when that feature gets merged into your main line.
+              Disposable Experimentation. Create a branch to experiment in,
+              realize it's not going to work, and just delete it - abandoning
+              the work—with nobody else ever seeing it (even if you've pushed
+              other branches in the meantime).
+            </p>
+            <h3>
+              <a
+                href="https://git-scm.com/about/branching-and-merging"
+                target="_blank"
+                id="reed__more"
+                >Read more</a
+              >
+            </h3>
+          </article>
+        </div>
+      </main>
+      <footer>
+        <div id="resources">
+          <h3>Resources</h3>
+          <ul>
+            <li>
+              <a href="https://git-scm.com/doc" target="_blank"
+                >Git Documentation</a
+              >
+            </li>
+            <li><a href="https://github.com/" target="_blank">GitHup</a></li>
+            <li>
+              <a href="https://git-scm.com/book/en/v2" target="_blank"
+                >Pro Git Book</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div id="Follow__us">
+          <h3>Follow Us</h3>
+          <div class="social-media">
+            <a href="https://facebook.com/" target="_blank">Facebook</a>
+            <a href="https://twitter.com/" target="_blank">Twitter</a>
+            <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+          </div>
+        </div>
+      </footer>
+    </div>
 </body>
 </html>
