--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,13 +15,21 @@
   <main>
   <form>
     <!-- write your html here-->
+     <div>
+      <label for="name">Name:</label>
+     <input type="text" name="name" id="name">
+     </div>
+     <div>
+      <label for="surname">Surname:</label>
+     <input type="text" name="surname" id="surname">
+     </div>
     <!-- try writing out the requirements first-->
   </form>
 
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Serna Malala</h2>
   </footer>
 </body>
 
