--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -17,11 +17,15 @@
     <!-- write your html here-->
      <div>
       <label for="name">Name:</label>
-     <input type="text" name="name" id="name">
+     <input type="text" name="name" id="name" required>
      </div>
      <div>
       <label for="surname">Surname:</label>
-     <input type="text" name="surname" id="surname">
+     <input type="text" name="surname" id="surname" required>
+     </div>
+     <div>
+      <label for="email">Email:</label>
+     <input type="email" name="email" id="email" required>
      </div>
     <!-- try writing out the requirements first-->
   </form>
