Added the radio buttons for the tshirt options, not 100% sure if that is correct

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -27,6 +27,21 @@
       <label for="email">Email:</label>
      <input type="email" name="email" id="email" required>
      </div>
+     <div>
+      <label for="tshirt">T-shirt Choice:</label>
+     </div>
+     <div>
+      <label for="tshirt">Red Tshirt</label>
+      <input type="radio" name="tshirt" id="red" required>
+     </div>
+     <div>
+      <label for="tshirt">Pink Tshirt</label>
+      <input type="radio" name="tshirt" id="pink" required>
+     </div>
+     <div>
+      <label for="tshirt">Black Tshirt</label>
+      <input type="radio" name="tshirt" id="black" required>
+     </div>
     <!-- try writing out the requirements first-->
   </form>
 
