The name filed fixed to include atleast two characters

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,7 +16,7 @@
   <form id="tshirt-order-form">
     <div>
       <label for="name">Customer Name:</label>
-      <input type="text" id="name" name="name" required pattern="[A-Za-z\s]+" title="Please enter a valid name (letters and spaces only).">
+      <input type="text" id="name" name="name" required pattern="[A-Za-z\s]+" title="Please enter a valid name (letters and spaces only)." minlength="2">
     </div>
 
     <div>
