--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -24,7 +24,7 @@
               name="name"
               required
               minlength="2"
-              pattern="[A-Za-z\s]+"
+              pattern="[A-Za-z\s'-]+"
             />
           </div>
           <div class="form-group">
