--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+ <header>
+  <div>
+    <h1>A Beginner's Guid to Git</h1>
+    <p>Uncover the power of Git, a vital tool for developers.</p>
+  </div>
+ </header>
 </body>
 </html
