added wrapper div and first article

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,6 +12,17 @@
     <h1>A Beginner's Guid to Git</h1>
     <p>Uncover the power of Git, a vital tool for developers.</p>
   </div>
+
+  <div class="wrapper">
+    <!-- First Article takes full width -->
+    <article>
+      <img src="images/git1.png" alt="git" class="article-image">
+      <h2>What is Git?</h2>
+      <p>Git is a distributed version control system that allows developers to track changes in their codebase...</p>
+      <a href="#" class="read-more">Read More</a>
+    </article>
+
+  </div>
  </header>
 </body>
 </html
