added second and thirs article

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -22,6 +22,23 @@
       <a href="#" class="read-more">Read More</a>
     </article>
 
+    <!-- Second and Third article stay side by side-->
+      
+    <article class="article2">
+      <img src="images/developer.png" alt="git" class="article-image" >
+      <h2>Why Developers Need Git</h2>
+      <p>Git enables developers to collaborate more effectively, manage code versions, and resolve conflicts easily.</p>
+      <a href="#" class="read-more">Read More</a>
+    </article>
+
+    <article class="article3">
+      <img src="images/branch.jpg" alt="git branch" class="article-image">
+      <h2>What is a Branch in Git?</h2>
+      <p>A branch in Git allows developers to work on separate features or fixes, keeping the main codebase clean and stable.</p>
+      <a href="#" class="read-more">Read More</a>
+
+    </article>
+
   </div>
  </header>
 </body>
