fix bug of first child in css for first card

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -23,7 +23,10 @@
                         <div class="thumb" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1721245711-ignoring-website-essentials-seacrch-ranking-g-1499534933.jpg?format=pjeg&auto=webp&crop=3:2,smart&width=500&height=334);"></div>
                         <article>
                             <h1>Ignoring This Website Essential Can Hurt Your Search Ranking — and Bring Legal Consequences</h1>
+                            <div>
                             <p>While many businesses value accessibility in principle, implementing it in specific ways that benefit both your customers and your business can feel daunting...</p>
+                            <p>Some of the downsides of not being fully accessible are obvious, including legal consequences, a negative brand image and a failure to engage with and support people with disabilities. While accessibility is clearly a good thing on its own and may be legally required depending on your location, it also impacts your website's SEO.                            </p>
+                        </div>
                             <button class="card-button">Read More</button>
                         </article>
                     </a>
