--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -36,8 +36,12 @@
                     <a href="https://www.entrepreneur.com/growing-a-business/8-common-seo-myths-debunked/466058" class="card">
                         <div class="thumb" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1715201746-seo-myths-derailing-business-0524-g1582372535.jpg?format=pjeg&auto=webp&crop=3:2,smart&width=500&height=334);"></div>
                         <article>
+                            
                             <h1>8 Common SEO Myths That Could Be Derailing Your Business — Drive More Visitors to Your Site By Doing This Instead.</h1>
+                            <div>
                             <p>However, the world of SEO is also riddled with myths and misconceptions that can lead businesses astray...</p>
+                            <p>However, the world of SEO is also riddled with myths and misconceptions that can lead businesses astray. Let's debunk some of the most common SEO myths and separate fact from fiction.</p>
+                            </div>
                             <button class="card-button">Read More</button>
                         </article>
                     </a>
@@ -47,8 +51,12 @@
                     <a href="https://www.entrepreneur.com/science-technology/host-your-website-with-ibrave-90-for-life-through/471350" class="card">
                         <div class="thumb" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1710795542-ENT-iBraveCloudWebHosting.jpeg?format=pjeg&auto=webp&crop=3:2,smart&width=500&height=334);"></div>
                         <article>
+                           
                             <h1>Host Your Website with iBrave — $90 for Life Through March 24</h1>
+                            <div>
                             <p>Finding a reliable website hosting solution is a non-negotiable for teams that are building a business...</p>
+                            <p>iBrave supports unlimited subdomains, bandwidth, SSD storage, custom email addresses, and MySQL databases, which really opens the doors in terms of what a team can do when hosting sites there. Its premium features include helpful bits of security in the reform of</p>
+                        </div>
                             <button class="card-button">Read More</button>
                         </article>
                     </a>
