--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -25,7 +25,7 @@
     <!-- Second and Third article stay side by side-->
       
     <article class="article2">
-      <img src="images/developer.png" alt="git" class="article-image" >
+      <img src="images/developer2.jpg" alt="git" class="article-image" >
       <h2>Why Developers Need Git</h2>
       <p>Git enables developers to collaborate more effectively, manage code versions, and resolve conflicts easily.</p>
       <a href="#" class="read-more">Read More</a>
@@ -38,6 +38,10 @@
       <a href="#" class="read-more">Read More</a>
 
     </article>
+
+    <footer>
+      <p>Wireframe By Samira Hekmati</p>
+    </footer>
 
   </div>
  </header>
