Added the date input that has a minimum and max date, making it only span over 4 weeks for the date choices

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -54,6 +54,11 @@
       </select>
       
      </div>
+
+     <div>
+      <label for="date">Date</label>
+      <input type="date" min="2024-10-18" max="2024-11-18" required>
+     </div>
     <!-- try writing out the requirements first-->
   </form>
 
