--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -43,17 +43,17 @@
       <input type="radio" name="tshirt" id="black" required>
      </div>
      <div>
-      <select name="size" id="size">
-        <option value="XS">T-shirt size</option>
+      <label for="size">T-shirt size</label>
+      <select name="size" id="size" required>
         <option value="XS">XS</option>
-        <option value="XS">S</option>
-        <option value="XS">M</option>
-        <option value="XS">L</option>
-        <option value="XS">XL</option>
-        <option value="XS">XXL</option>
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
       </select>
-      
-     </div>
+    </div>
+    
 
      <div>
       <label for="date">Date</label>
