--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -17,11 +17,11 @@
     <!-- write your html here-->
      <div id="user-info"> 
       <label for="name">Name:</label>
-     <input type="text" name="name" id="name" required>
+     <input type="text" name="name" id="name"  minlength="2" required>
      </div>
      <div id="user-info">
       <label for="surname">Surname:</label>
-     <input type="text" name="surname" id="surname" required>
+     <input type="text" name="surname" id="surname" minlength="2" required>
      </div>
      <div id="user-info">
       <label for="email">Email:</label>
