--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="index.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="index.js"></script> -->
   <header>
     <h1>Product Pick</h1>
   </header>
@@ -19,11 +19,11 @@
       <div class="formbox">
         
       <div>
-          <label for="name">Name</label>
+          <label for="name" class="input-label">Name</label>
           <input type="text" id="name" name="name" required> 
         </div>
         <div>
-          <label for="family">Family</label>
+          <label for="family" >Family</label>
           <input type="text" id="family" name="family" required> 
         </div>
         <div>
